2009-03-31  Oliver Hader  <oliver@typo3.org>

	* Flollow-up to bug #10025: Enabled to cut off image profiles for image resizing by default

2009-03-30  Francois Suter  <francois@typo3.org>

	* Added feature #10320: Split CSS styled content templates in version templates to get rid of the compat version checks (thanks to Susanne Moog)

2009-03-30  Benjamin Mack  <benni@typo3.org>

	* Added feature #10718: Make tce_file usable via AJAX, uploads, file manipulation etc via AJAX in the Backend now possible

2009-03-27  Francois Suter  <francois@typo3.org>

	* Fixed issue #10798: Flag sectionIndex is not used for "menu of subpages + sections" (thanks to Xaviers Perseguers)

2009-03-27  Patrick Broens  <patrick@patrickbroens.nl>

	* Fixed bug #10777: Make versioning module icon skinnable
	* Fixed bug #10768: Small rendering/css bug on FE with Text	with image

2009-03-27  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #10773: TCA change for BE_USER (admin with less fields, admin checkbox on first tab)
	* Fixed bug #10796: Click on (WS 48hour-) preview link in versioning module causes a fatal error
	* Fixed bug #10025: ImageMagick generates larger than necessary files

2009-03-27  Michael Stucki  <michael@typo3.org>

	* Added feature #10734: Indicate number of USER_INT objects used on a page in Admin Panel

2009-03-26  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #10776: Clearing cache_treelist after inserting page on root level does not work

2009-03-26  Rupert Germann  <rupi@gmx.li>

	* Fixed bug #10723: ambigious description of the 'lifetime' option in installtool (thanks to Dan Osipov)

2009-03-26  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #5957: Misleading comments in class.t3lib_extmgm.php

2009-03-24  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #10642: Backend admin cannot perform file operations in filelist (credits to Christian Kuhn)
	* Fixed bug #10761: Searching for specific record opens "edit record" in wrong frame
